--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #train {
     position: relative;
     cursor: pointer;
